# image_processing

./: .gitignore  CMakeLists.txt  colordetector.cpp  colordetector.h  colorhistogram.h  contentFinder.cpp  contentFinder.h  finder.cpp  grabcut.cpp  histogram.cpp  histogram.h  huesaturation.cpp  imageComparator.h  load_image.cpp  manipulate_color.cpp  manipulate_pixels.cpp  retrieve.cpp
